--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@types/jest": "^26.0.23",
     "@types/react": "^18.0.28",
     "@types/react-native": "^0.71.3",
+    "@types/react-native-vector-icons": "^6.4.13",
     "@types/react-test-renderer": "^18.0.0",
     "@typescript-eslint/eslint-plugin": "^5.37.0",
     "@typescript-eslint/parser": "^5.37.0",
